--- a/first.html
+++ b/first.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>
-        hello karthik iam kurra karthik
-    </h1>
+    <title>Event Registration Form</title>
+    <link rel=""stylesheet" href=""style.css">
 </head>
 <body>
-    
+   <div class=""container">
+    <h1>Event Registration</h1>
+    <form id ="Registrationform">
+        <div class=""form-group">
+        <label for="name">Full Name</label>
+    <input type="text" id="name" name="name" placeholder="enter your full name" required>
+</div>
+         <div class=""form-group">
+        <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="enter your email" required>
+         </div>
+          <div class=""form-group">
+        <label for="phone">phone</label>
+    <input type="phone" id="phone" name="phone" placeholder="enter your phone number" required>
+         </div>
+</div> 
 </body>
 </html>
